Fixed button vertical text alignment

--- a/client/public/input.scss
+++ b/client/public/input.scss
@@ -98,7 +98,10 @@ a.textButton {
 .button {
 	@include noselect();
 	cursor: pointer;
-	display: inline-block;
+	display: inline-flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	background: $blue;
 	color: white;
 	border-radius: 2em;
